# gooogle_sheets_reader

./: .gitignore  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
gooogle_sheets_reader/: manage.py
gooogle_sheets_reader/gooogle_sheets_reader/: asgi.py  settings.py  urls.py  wsgi.py
gooogle_sheets_reader/gooogle_sheets_reader/apps/: credentials.json
gooogle_sheets_reader/gooogle_sheets_reader/apps/google_sheet_reader/: apps.py  models.py  reader_settings.py  serializers.py  urls.py  utils.py  views.py
gooogle_sheets_reader/gooogle_sheets_reader/apps/google_sheet_reader/migrations/: 0001_initial.py
gooogle_sheets_reader_ui/: package-lock.json  package.json
gooogle_sheets_reader_ui/src/: index.js
gooogle_sheets_reader_ui/src/components/app/: App.js
gooogle_sheets_reader_ui/src/components/common/: Checkbox.js  SyncCheckbox.js
gooogle_sheets_reader_ui/src/components/content/: Content.js
gooogle_sheets_reader_ui/src/components/header/: Header.js
gooogle_sheets_reader_ui/src/components/home/: Home.js
gooogle_sheets_reader_ui/src/components/sheetrows/: SheetRows.js
gooogle_sheets_reader_ui/src/components/sheettable/: SheetTable.js
gooogle_sheets_reader_ui/src/components/toppanel/: TopPanel.js
